# life

./: README.md  pyproject.toml
src/life_cli/: __init__.py  __main__.py  cli.py  grid.py  patterns.py  patterns.toml  views.py
