[project]
name = "life-cli"
dynamic = ["version"]
description = "A simple visualization of Conway's game of Life"
authors = [
    { name = "The_philosopher", email = "email.shinudonney@gmail.com" }
]
dependencies = [
    "blessed>=1.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
life = "life_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hatch>=1.12.0",
]

[tool.hatch.version]
path = "src/life_cli/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/life_cli"]
